@@ -492,7 +492,7 @@ class RangerController {
    *     where XXXX is a sample accession number (the same as accession
    *     parameter in the /sample url)
    *
-   *   /ga4gh/v.0.1/get/sample/XXXX
+   *   /ga4gh/sample/XXXX
    *     where XXXX is a sample accession number (the same as accession
    *     parameter in the /sample url)
    *                 format    - as above
@@ -505,7 +505,7 @@ class RangerController {
    *                             must also be specified
    * </pre>
    *
-   * <p>The URL starting with /ga4gh/v.0.1 outputs redirection JSON response according to
+   * <p>The URL starting with /ga4gh outputs redirection JSON response according to
    * to the version of the GA4GH specification given in the URL. The rest of URLs stream the
    * data directly.</p>
    *
@@ -615,7 +615,7 @@ class RangerController {
       let map = new Map();
       map.set(new RegExp(/^\/file$/),   'fileClback');
       map.set(new RegExp(/^\/sample$/), 'sampleClback');
-      map.set(new RegExp(/^\/ga4gh\/v\.0\.1\/get\/sample\/([\.\w]+)$/), 'redirectClback');
+      map.set(new RegExp(/^\/ga4gh\/sample\/([\.\w]+)$/), 'redirectClback');
       map.set(new RegExp(/^\/sample\/([\.\w]+)\/reference$/), 'referenceClback');
 
       let it = map.entries();
