@@ -94,7 +94,7 @@
                 desc:         'Data for ' + data.accession,
                 serviceType:  'ga4gh', //
                 reqAuth:      false,
-                bamRangerURI: rangerUrl + '/ga4gh/v.0.1/get/sample/' + data.accession,
+                bamRangerURI: rangerUrl + '/ga4gh/sample/' + data.accession,
               },
             ],
         });
