@@ -18,6 +18,7 @@ LIST OF CHANGES for npg_ranger project
     - remove 406
     - replace 409 & 422 with 400 + tailored status message
   - move trailer logic from error to controller
+  - simplify url path to /ga4gh/sample (remove 'v.0.1/get')
 
 release 1.4.1
   - update database entries in docker for public data
